@@ -6,12 +6,20 @@ if [ -e /usr/bin/mrViewer ]; then
     rm -f /usr/bin/mrViewer
 fi
 
+#
+# Add mrViewer to path
+#
 ln -s @CPACK_INSTALL_PREFIX@/bin/mrViewer.sh /usr/bin/mrViewer
 
-
+#
+# Install Desktop icon
+#
 dir=$(xdg-user-dir DESKTOP)
 cp -f /usr/share/applications/mrViewer-v@VERSION@.desktop ${dir}
 
+xdg-mime default mrViewer-v@VERSION@.desktop video/mp4 video/mpeg video/quicktime video/x-javafx video/x-flv video/x-matroska video/x-ms-wmv video/x-msvideo
+
+xdg-mime default mrViewer-v@VERSION@.desktop image/bmp image/cin image/dpx image/gif image/jpeg image/png image/tiff image/vnd.adobe.photoshop image/vnd.microsoft.icon image/x-exr image/x-iff image/x-sgi image/x-sxr image/x-tga image/x-xcf image/x-xbitmap image/x-xpixmap
+
 update-desktop-database
 update-mime-database /usr/share/mime
-
